--- a/styles/notion.css
+++ b/styles/notion.css
@@ -16,11 +16,18 @@
   padding: 0;
 }
 
+.notion-page .notion-page-content {
+  max-width: 900px !important;
+}
+
 .notion-page {
   padding-bottom: calc(max(5vh, 32px)) !important;
   line-height: 1.65;
 }
 
+.notion-aside {
+  margin-left: 100px;
+}
 .index-page {
   --notion-max-width: 900px;
 }
@@ -44,7 +51,7 @@
 }
 
 .notion-header .notion-nav-header {
-  max-width: 1100px;
+  max-width: 970px;
   margin: 0 auto;
 }
 
@@ -167,7 +174,7 @@
 
 .notion-title {
   display: block;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .notion-collection-row {
@@ -193,7 +200,7 @@
 .notion-page-cover-wrapper,
 .notion-page-cover-wrapper span,
 .notion-page-cover-wrapper img {
-  max-width: 1200px !important;
+  max-width: 900px !important;
   border-radius: 24px;
 }
 
@@ -201,7 +208,7 @@
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 900px) {
   .notion-page-cover-wrapper,
   .notion-page-cover-wrapper span,
   .notion-page-cover-wrapper img {
